--- a/views/box-office.handlebars
+++ b/views/box-office.handlebars
@@ -1,11 +1,11 @@
-  
 <div class="ticket-container">
     <div class="tickets">
-        <button class="ticket-btn">HORROR</button>
-        <button class="ticket-btn">SCI-FI</button>
-        <button class="ticket-btn">ROMANCE</button>
-        <button class="ticket-btn">COMEDY</button>
-        <button class="ticket-btn">ACTION</button>
-    </div>
+        <button id="btn-horror" class="ticket-btn">HORROR</button>
+        <button id="btn-scifi" class="ticket-btn">SCI-FI</button>
+        <button id="btn-romance" class="ticket-btn">ROMANCE</button>
+        <button id="btn-comedy" class="ticket-btn">COMEDY</button>
+        <button id="btn-action" class="ticket-btn">ACTION</button>
     </div>
 </div>
+
+<script src="/javascript/box-office.js"></script>
