--- a/views/quiz.handlebars
+++ b/views/quiz.handlebars
@@ -1,7 +1,7 @@
 <section id="quiz-content" class="section">
   <button id="logout" class="btn-no-style">logout</button>
   <div id="main" class="container">
-    <h1 class="quiz-header">{{username}} IS CURRENTLY PLAYING THE {{category}} QUIZ</h1>
+    <h1 class="quiz-header">PLAYING THE HORROR QUIZ</h1>
     <div class="columns">
       <div id="question-container" class="column">
         {{questions}}*QUESTION APPEARS HERE*
